<resources>
    <string name="app_name">PlacePoint</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pub Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="business_profile">Business Profile</string>
    <string name="my_timeline">My Posts</string>
    <string name="categories">Categories</string>
    <string name="add_post">Post</string>
    <string name="agent_login">Agent Login</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">EMAIL ID</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo">logo</string>
    <string name="splash_bg">splash_bg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Business Registration</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="search_here">Search Here</string>
    <string name="toolbar_title"></string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="business_category">Business Category</string>
    <string name="bus_location">Business Location</string>
    <string name="bus_name">Business Name</string>
    <string name="bname_err">Business Name is required.</string>
    <string name="bloc_error">Business Location is required.</string>
    <string name="bcat_err">Business Category is required.</string>
    <string name="choose_business_name">Choose Business Name</string>
    <string name="add_business_content">Add Business Content</string>
    <string name="thu">T</string>
    <string name="sun">S</string>
    <string name="sat">S</string>
    <string name="fri">F</string>
    <string name="wed">W</string>
    <string name="tue">T</string>
    <string name="mon">M</string>
    <string name="closing_hours">Closing Hours :</string>
    <string name="opening_hours">Opening Hours :</string>
    <string name="pick_address_from_maps">Pick Address From Maps</string>
    <string name="enter_contact">Enter Contact No.</string>
    <string name="fail_to_crop">Failed To Crop Image</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="image_res">Only 5 images can be selected</string>

    <string name="title_activity_business_detail_map">Map</string>
    <string name="image_res_one">Ony 1 image can be selected</string>
    <string name="title_activity_profile_map">Map</string>
    <string name="address_string">Address :</string>
    <string name="youtube_url">Youtube URL(Optional)</string>
    <string name="network_error">No Internet Connection.</string>
    <string name="server_error">Server Error</string>
    <string name="select_five_images">Please Select Five Images</string>
    <string name="enter_email">Enter Email</string>
    <string name="scheduletext">To schedule a post to run on interval like every saturday or any specific date using scheduling</string>
    <string name="standardText">    Standard   \u20ac 100/year</string>
    <string name="premiumText">    Premium   \u20ac 150/year</string>
    <string name="freePlan">Free   \u20ac 0/year</string>
    <string name="prompt_coupon">Enter Coupon</string>
    <string name="welcome">PlacePoint connects people looking for \nthings to do with the businesses\nproviding those services. The live feed\nsection contains information directly\nfrom the businesses in real time, giving\nyou instant in one central place. In the\n near future we will be expanding to\n include many more categories.\nPlease select category from the\n bottom menu to continue.</string>


    <!--<string name="noDataHomeFlash">No flash posts available at the moment</string>-->
    <string name="noDataHomeFlash">No flash posts available at the moment</string>
    <string name="addNote"><![CDATA[Rules: Flash Deals MUST be exclusive to PlacePoint & there must be a discount of 20% or higher. There is zero commission taken for running a flash deal and everyone with the PlacePoint app will get a notification on their phone that a deal is available.]]></string>
    <string name="textHomeFlash">Flash Deals are heavily discounted deals from businesses. Dont worry if you just see expired deals, we have several deals most weeks and as long as the app is installed you will get an instant notification when a deal is available.</string>
    <string name="updateNow"><u>Update Now</u></string>
    <string name="seeCategories"><u>See Categories</u></string>
    <string name="seeAll"><u>See All</u></string>
    <string name="textcategory"><![CDATA[Placepoint has a live feed of activities & events from businesses in your town. Select a category then switch between business listings and the live activity feed tabs to keep up to date with whats going on in your town.]]></string>
    <!--<string name="welcome">PlacePoint connects people looking for things to do with the businesses providing those services. The live feed section contains information  directly from the businesses in real time, giving you instant in one central place. In the near future we will be expanding to include many more categories. Please select category from the bottom menu to continue.</string>-->
    <string name="begin_chat">Start chat</string>
    <string name="chat_with">Chat with the Jivo support team</string>
    <string name="made_with">This app was made</string>
    <string name="sdk">with the JivoChat Mobile SDK</string>
    <string name="restrictionMsg"><b>Restricted Feature</b>
        \nFree users do not have access to the following features:
          \n1 - Create Posters (Web Only)\n
            2 - Schedule Posts\n
            3 - Flash Deals\n
            4 - Featured Listings on Homepage\n
            5 - Prominent placement in category view\n
            6 - Competitions (coming soon)\n
            7 - Featured Business of the week promotion\n
            8 - Unlimited Relevant Categories (Restricted to 2 max)
            \nPlease upgrade the Package to avail unrestricted access across the platform.
</string>
    <string name="restrictionMsgwithImage">Seems like you are a Free User.</string>
    <string name="restrictionMsgwithImagesub">Free users do not have access to the following features -
        \n\n1 - Create Posters (Web Only)\n
2 - Schedule Posts\n
3 - Flash Deals\n
4 - Featured Listing on homepage\n
5 - Prominent placement in category view\n
6 - Competitions (coming soon)\n
7 - Featured Business of the week promotion\n
8 - Unlimited Relevant Categories (Restricted to 2 max)\n\nTo unlock these features click here to upgrade.
</string>
    <string-array name="claims">
        <item>Select Claims</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
