<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp">

    <TextView
        android:background="@color/grey"
        android:id="@+id/coverlay"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/mon"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_blue"
            android:button="@null"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@drawable/radio_button_text" />

        <RadioButton
            android:id="@+id/tues"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@drawable/radio_button_text" />


        <RadioButton
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@drawable/radio_button_text" />

        <RadioButton
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@drawable/radio_button_text" />

        <RadioButton
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@drawable/radio_button_text" />

        <RadioButton
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@drawable/radio_button_text" />


        <RadioButton
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_white"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@drawable/radio_button_text" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>